Major refactoring of FTLParser and FTLStream, and how it interacts with Scalar/SIMD implementations. Eliminated SWAR implementation. Minor test code cleanups.